octobox/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: octobox
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:9.6.22-stretch
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: database-volume
            subPath: data
      volumes:
        - name: database-volume
          persistentVolumeClaim:
            claimName: octobox-database-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: octobox
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
