octobox/octobox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octobox
  namespace: octobox
spec:
  selector:
    matchLabels:
      app: octobox
  template:
    metadata:
      labels:
        app: octobox
    spec:
      containers:
      - name: octobox
        image: octoboxio/octobox:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: octobox-service
  namespace: octobox
spec:
  selector:
    app: octobox
  ports:
  - port: 3000
    targetPort: 3000
