octobox/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: octobox
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:4.0-alpine
        resources:
          limits:
            memory: "256Mi"
            cpu: "300m"
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: octobox
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
