octobox/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: octobox-ingress
  namespace: octobox
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: octobox.flou21.de
    http:
      paths:
      - path: /
        backend:
          serviceName: octobox-service
          servicePort: 3000
